# sbgECom

./: CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.md  README.md
cmake/: CMakeLists.txt
common/: sbgCommon.c  sbgCommon.h  sbgCommonLibVersion.h  sbgConfig.h  sbgDefines.h  sbgErrorCodes.c  sbgErrorCodes.h  sbgTypes.h
common/crc/: sbgCrc.h
common/debug/: sbgDebug.h
common/interfaces/: sbgInterface.c  sbgInterface.h  sbgInterfaceFile.c  sbgInterfaceFile.h  sbgInterfaceSerial.h  sbgInterfaceSerialUnix.c  sbgInterfaceSerialWin.c  sbgInterfaceUdp.c  sbgInterfaceUdp.h
common/network/: sbgNetwork.c  sbgNetwork.h
common/platform/: sbgPlatform.c  sbgPlatform.h
common/splitBuffer/: sbgSplitBuffer.h
common/streamBuffer/: sbgStreamBuffer.h  sbgStreamBufferBE.h  sbgStreamBufferCommon.h  sbgStreamBufferLE.h
common/string/: sbgString.c  sbgString.h
common/swap/: sbgSwap.h
common/version/: sbgVersion.c  sbgVersion.h
doc/: binaryCommands.md  binaryMessages.md  migrations.md  nmeaMessages.md
doc/html/: annotated.html  classes.html  dir_5903c71b979204ea1ce2d27420efeaa9.html  dir_59d128fb766534d0ff9e97832ccaaa5c.html  dir_5e80d29b61c444378a543be4dd1414df.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_ca88af47f35d3caa830e81530084c4b9.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_g.html  functions_h.html  functions_i.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_q.html  functions_r.html  functions_s.html  functions_t.html  functions_u.html  functions_v.html  functions_vars.html  functions_vars_b.html  functions_vars_c.html  functions_vars_d.html  functions_vars_e.html  functions_vars_f.html  functions_vars_g.html  functions_vars_h.html  functions_vars_i.html  functions_vars_l.html  functions_vars_m.html  functions_vars_n.html  (+158 more)
examples/airDataInput/src/: airDataInput.c
examples/ellipseMinimal/src/: ellipseMinimal.c
examples/ellipseOnboardMagCalib/src/: ellipseOnboardMagCalib.c
examples/hpInsMinimal/src/: hpInsMinimal.c
examples/pulseMinimal/src/: pulseMinimal.c
src/: sbgECanId.h  sbgECom.c  sbgECom.h  sbgEComGetVersion.h  sbgEComIds.h  sbgEComLib.h  sbgEComVersion.h
src/binaryLogs/: sbgEComBinaryLogAirData.h  sbgEComBinaryLogAutomotiveData.h  sbgEComBinaryLogDepth.c  sbgEComBinaryLogDepth.h  sbgEComBinaryLogDiag.c  sbgEComBinaryLogDiag.h  sbgEComBinaryLogDvl.c  sbgEComBinaryLogDvl.h  sbgEComBinaryLogEkf.c  sbgEComBinaryLogEkf.h  sbgEComBinaryLogEvent.c  sbgEComBinaryLogEvent.h  sbgEComBinaryLogGps.c  sbgEComBinaryLogGps.h  sbgEComBinaryLogImu.c  sbgEComBinaryLogImu.h  sbgEComBinaryLogMag.c  sbgEComBinaryLogMag.h  sbgEComBinaryLogOdometer.c  sbgEComBinaryLogOdometer.h  sbgEComBinaryLogRawData.c  sbgEComBinaryLogRawData.h  sbgEComBinaryLogRtcm.c  sbgEComBinaryLogRtcm.h  sbgEComBinaryLogSat.c  sbgEComBinaryLogSat.h  sbgEComBinaryLogShipMotion.c  sbgEComBinaryLogShipMotion.h  sbgEComBinaryLogStatus.c  sbgEComBinaryLogStatus.h  sbgEComBinaryLogUsbl.c  sbgEComBinaryLogUsbl.h  sbgEComBinaryLogUtc.c  sbgEComBinaryLogUtc.h  sbgEComBinaryLogs.c  sbgEComBinaryLogs.h
src/commands/: sbgEComCmd.h  sbgEComCmdAdvanced.h  sbgEComCmdAirData.h  sbgEComCmdApi.c  sbgEComCmdApi.h  sbgEComCmdCommon.c  sbgEComCmdCommon.h  sbgEComCmdDvl.h  sbgEComCmdEthernet.c  sbgEComCmdEthernet.h  sbgEComCmdEvent.c  sbgEComCmdEvent.h  sbgEComCmdFeatures.h  sbgEComCmdGnss.c  sbgEComCmdGnss.h  sbgEComCmdInfo.h  sbgEComCmdInterface.h  sbgEComCmdLicense.h  sbgEComCmdMag.c  sbgEComCmdMag.h  sbgEComCmdOdo.h  sbgEComCmdOutput.h  sbgEComCmdSensor.h  sbgEComCmdSettings.h
src/defs/: sbgEComDefsGnss.h
src/logs/: sbgEComLog.c  sbgEComLog.h  sbgEComLogEkf.h  sbgEComLogGnssPos.h  sbgEComLogPtp.c  sbgEComLogPtp.h  sbgEComLogShipMotion.h  sbgEComLogStatus.h
src/protocol/: sbgEComProtocol.c  sbgEComProtocol.h
src/sessionInfo/: sbgEComSessionInfo.c  sbgEComSessionInfo.h
src/transfer/: sbgEComTransfer.c  sbgEComTransfer.h
tools/sbgBasicLogger/: README.md
tools/sbgBasicLogger/src/: loggerApp.cpp  main.c  sbgBasicLoggerAccumulators.c  sbgBasicLoggerAccumulators.h  sbgBasicLoggerFile.c  sbgBasicLoggerFile.h  sbgBasicLoggerHandler.c  sbgBasicLoggerHandler.h
tools/sbgBasicLogger/src/loggerEntry/: loggerEntryAidings.h  loggerEntryDvl.h  loggerEntryEkf.h  loggerEntryEkfRotAccel.h  loggerEntryEvent.h  loggerEntryGeneral.cpp  loggerEntryGeneral.h  loggerEntryGnss.cpp  loggerEntryGnss.h  loggerEntryImu.h  loggerEntryMag.h  loggerEntryShipMotion.h
tools/sbgBasicLogger/src/loggerManager/: loggerEntry.h  loggerManager.cpp  loggerManager.h
tools/sbgEComApi/: README.md
tools/sbgEComApi/src/: main.c
